--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="https://discord.com/channels/1101587692703186995/1163332418250489907"
+                        href="discord://discord.com/channels/1101587692703186995/1163332418250489907"
                         target="_blank"
                         >Submit Record</a
                     >
