changed index and list_icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>NZDL</h2>
+                <h2>NZPlatList</h2>
                 <p>v1.0</p>
             </div>
             <nav class="nav">
