--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
         <meta name="description" content="A list ranking the 150 hardest demons beaten in New Zealand.">
-        <title>NZ Demonlist</title>
+        <title>NZ Platformer List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
