--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <meta name="description" content="A list ranking the 150 hardest demons beaten in New Zealand.">
+        <meta name="description" content="A list ranking the hardest platformer demons beaten in New Zealand.">
         <title>NZ Platformer List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
