--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
-                <a href="nzdl.pages.dev">Classic</a>
+                <a class="nav__tab" href="https://nzdl.pages.dev" target="_self">Classic</a>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
