--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
                 <a class="nav__tab" href="https://nzdl.pages.dev" target="_self">Classic</a>
+                <router-link class="nav__tab" to="https://nzdl.pages.dev">
+                    <span class="type-label-lg">ClassicList</span>
+                </router-link>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
