--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
-                <a class="nav__tab" href="https://nzdl.pages.dev" target="_self">Classic</a>
-                <router-link class="nav__tab" to="https://nzdl.pages.dev">
-                    <span class="type-label-lg">ClassicList</span>
-                </router-link>
+                <span>
+                    <a class="nav__tab" href="https://nzdl.pages.dev" target="_self">Classic</a>
+                </span>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
