--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
                 <span>
-                    <a class="nav__tab" href="https://nzdl.pages.dev" target="_self">Classic</a>
+                    <a class="type-label-lg" href="https://nzdl.pages.dev" target="_self">Classic</a>
                 </span>
                 <div class="nav__actions">
                     <button
