--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
-                <span>
-                    <a class="type-label-lg" href="https://nzdl.pages.dev" target="_self">Classic</a>
-                </span>
+                    <a class="nav__tab type-label-lg" href="https://nzdl.pages.dev" target="_self">Classic</a>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
