--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>NZPlatList</h2>
-                <p>v1.0</p>
+                <h2>NZDL</h2>
+                <p>v0.5 beta</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
